Fix typo in colors.css (core2019_Light desktop)

--- a/core/themes/core2019_Light/desktop/colors.css
+++ b/core/themes/core2019_Light/desktop/colors.css
@@ -4,7 +4,7 @@ colors Light
 */
 :root {
   --lineheight : 1.42em;
-  /* keet it as rem even when zero!!*/
+  /* keep it as rem even when zero!!*/
   --border-radius: 0rem;
   --opacity: 1;
 
