allow repport on health and eqLogic alert

--- a/core/template/scenario/report.default.html
+++ b/core/template/scenario/report.default.html
@@ -4,7 +4,9 @@
     <option value="view">{{Vue}}</option>
     <option value="plan">{{Design}}</option>
     <option value="plugin">{{Plugin}}</option>
-    <option value="eqAnalyse">{{Analyse Equipements}}</option>
+    <option value="eqAnalyse">{{Batteries}}</option>
+    <option value="eqAnalyseAlert">{{Alerte Equipements}}</option>
+    <option value="health">{{Santé}}</option>
     <option value="timeline">{{Timeline}}</option>
     <option value="url">{{URL}}</option>
   </select>
