try update unit in same time as value

--- a/core/template/dashboard/cmd.info.numeric.shutter.html
+++ b/core/template/dashboard/cmd.info.numeric.shutter.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="value" data-cmd_id="#id#">
-    <div class="state"><strong>#state#</strong> <strong>#unite#</strong></div>
+    <div class="state"><strong>#state# #unite#</strong></div>
   </div>
   <div class="cmdStats #hide_history#">
     <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
@@ -27,10 +27,10 @@
       cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
       height = 100 - (Math.round(parseFloat(height) * 10) / 10)
       cmd.find('.shuttergauge-value').height(height+'%')
-      cmd.find('.state strong').first().text(_options.display_value)
+      cmd.find('.state strong').first().text(_options.display_value+' '+_options.unit)
     }
 
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#'})
+    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',unit:'#unite#'})
 
     if ($.issetWidgetOptParam('#color#', 'color')) {
       $('.cmd[data-cmd_id=#id#]').find('div.shuttergauge-value').style('background', '#color#', 'important')
