--- a/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
@@ -53,7 +53,7 @@
       })
     }
 
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#',unit:'#unite#'})
 
     $('body').on('changeThemeEvent', function (event, theme) {
       $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd')
