--- a/core/template/dashboard/cmd.info.numeric.badge.html
+++ b/core/template/dashboard/cmd.info.numeric.badge.html
@@ -17,9 +17,9 @@
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
       $('.cmd[data-cmd_id=#id#]').attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      $('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value +' #unite#')
+      $('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value +' '+_options.unit)
     }
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#',unit:'#unite#'})
 
     if ($.issetWidgetOptParam('#color#', 'color')) {
       $('.cmd[data-cmd_id=#id#] .label.state').style('background-color', '#color#', 'important')
