--- a/core/template/dashboard/cmd.info.numeric.line.html
+++ b/core/template/dashboard/cmd.info.numeric.line.html
@@ -1,13 +1,13 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="numeric" data-template="line" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="content-xs">
-    <span class="cmdName #hide_name#">#name_display# </span> <strong class="state"></strong> #unite#
+    <span class="cmdName state #hide_name#">#name_display# #unite#</span>
   </div>
   <template></template>
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      cmd.find('.state').empty().append(_options.display_value);
+      cmd.find('.state').empty().append(_options.display_value+' '+_options.unit);
       if(_options.alertLevel){
         if(_options.alertLevel == 'warning'){
           cmd.find('.content-xs').addClass('label label-warning')
@@ -21,6 +21,6 @@
         }
       }
     }
-    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#',unit:'#unite#'})
   </script>
 </div>
