--- a/core/template/dashboard/cmd.info.numeric.line.html
+++ b/core/template/dashboard/cmd.info.numeric.line.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="numeric" data-template="line" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="content-xs">
-    <span class="cmdName state #hide_name#">#name_display# #unite#</span>
+    <span class="cmdName #hide_name#">#name_display# </span> <strong class="state"></strong>
   </div>
   <template></template>
   <script>
