handle unit update on widget

--- a/core/template/mobile/cmd.info.numeric.default.html
+++ b/core/template/mobile/cmd.info.numeric.default.html
@@ -28,7 +28,7 @@
     }
 
     if (is_numeric('#state#')) {
-      jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#'})
+      jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#',unit:'#unite#'})
     } else {
       $('.cmd[data-cmd_uid=#uid#] .gauge').append('<center><span class="label label-danger">#state#</span></center>')
     }
