--- a/core/template/scenario/wait.default.html
+++ b/core/template/scenario/wait.default.html
@@ -7,7 +7,7 @@
 
 </div>
 <div class="input-group input-group-sm" style="width: calc(100% - 3px)">
-  <span class="input-group-addon roundedLeft" style="width: 100px">{{Time out}}</span>
+  <span class="input-group-addon roundedLeft" style="width: 100px">{{Time out}} (sec)</span>
   <input value="#timeout#" class="expressionAttr form-control input-sm roundedRight" data-l1key="options" data-l2key="timeout" data-cmd_id="#id#" data-uid="#uid#"/>
 </div>
 <script>
